--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
 
-    implementation 'dev.dworks.libs:volleyplus:0.1.4'
+    implementation 'com.github.DWorkS:VolleyPlus:fecf45af2f'
 }
